# svariational

./: .gitignore  setup.cfg
svariational/: __init__.py  _padding.py  _psfs.py  _spitfire.py  _total_variation.py
