[metadata]
name = svariational
version = 0.0.1
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
url = https://github.com/sylvainprigent/svariational
license = GPL-3.0-only
description = implementation variational image processing methods
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: pytorch
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    torch>=1.9.1
    scikit-image>=0.18.3
    natsort>=7.1.1
